fix: align introductions section tiles with homepage

--- a/styles/_home-page.scss
+++ b/styles/_home-page.scss
@@ -188,8 +188,12 @@ a {
 #main-content #introductions-grid {
   grid-template-columns: 1fr;
 
+  @include tablet {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   @include desktop {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
