--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -57,9 +57,17 @@
 /* Introductions grid */
 #introductions-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* responsive */
+  grid-template-columns: 1fr;
   gap: 32px;
   text-align: center;
+
+  @include tablet {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include desktop {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   .intro-item {
     background: #fff;
